tests/out/error/result/or_returns_no_value.out
tests/out/error/result/or_returns_no_value.in.bt:5:6 error: or block does not return a value
